// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Hearing should render empty data correctly 1`] = `
<div
  className="sc-EHOje jyflZT"
>
  <h3
    className="sc-htpNat KTbaq"
  >
    Report details
  </h3>
  <div
    className="sc-bdVaJa iAgRsv"
  >
    <div
      className="sc-bwzfXH jAbEpK"
    >
      <div
        className="sc-bdVaJa iAgRsv"
      >
        <div
          className="sc-bwzfXH eewyZO"
        >
          <strong
            className="label"
          >
            Incident date and time
          </strong>
          <p
            className="sc-bxivhb ddqgmM"
          >
            --
          </p>
        </div>
        <div
          className="sc-bwzfXH eewyZO"
        >
          <strong
            className="label"
          >
            Type
          </strong>
          <p
            className="sc-bxivhb ddqgmM"
          >
            --
          </p>
        </div>
        <div
          className="sc-bwzfXH eewyZO"
        >
          <strong
            className="label"
          >
            Location
          </strong>
          <p
            className="sc-ifAKCX ftAxxp"
          >
            --
          </p>
          <p>
            --
          </p>
        </div>
      </div>
      <div
        className="sc-bdVaJa iAgRsv"
      >
        <div
          className="sc-bwzfXH gWDLqX"
        >
          <strong
            className="label"
          >
            Detail
          </strong>
          <p
            className="sc-bxivhb ddqgmM"
          >
            --
          </p>
        </div>
      </div>
    </div>
    <div
      className="sc-bwzfXH dHeecD"
    >
      <div
        className="sc-bdVaJa iAgRsv"
      >
        <div
          className="sc-bwzfXH flfcYD"
        >
          <strong
            className="label"
          >
            Report number
          </strong>
          <p
            className="sc-bxivhb ddqgmM"
          >
            --
          </p>
        </div>
        <div
          className="sc-bwzfXH flfcYD"
        >
          <strong
            className="label"
          >
            Reported by
          </strong>
          <p
            className="sc-bxivhb ddqgmM"
          >
            --
          </p>
        </div>
      </div>
      <div
        className="sc-bdVaJa iAgRsv"
      >
        <div
          className="sc-bwzfXH flfcYD"
        >
          <strong
            className="label"
          >
            Report date and time
          </strong>
          <p
            className="sc-bxivhb ddqgmM"
          >
            --
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Hearing should render present detail correctly 1`] = `
<div
  className="sc-EHOje jyflZT"
>
  <h3
    className="sc-htpNat KTbaq"
  >
    Report details
  </h3>
  <div
    className="sc-bdVaJa iAgRsv"
  >
    <div
      className="sc-bwzfXH jAbEpK"
    >
      <div
        className="sc-bdVaJa iAgRsv"
      >
        <div
          className="sc-bwzfXH eewyZO"
        >
          <strong
            className="label"
          >
            Incident date and time
          </strong>
          <p
            className="sc-bxivhb ddqgmM"
          >
            12/04/2014 - 12:32
          </p>
        </div>
        <div
          className="sc-bwzfXH eewyZO"
        >
          <strong
            className="label"
          >
            Type
          </strong>
          <p
            className="sc-bxivhb ddqgmM"
          >
            General
          </p>
        </div>
        <div
          className="sc-bwzfXH eewyZO"
        >
          <strong
            className="label"
          >
            Location
          </strong>
          <p
            className="sc-ifAKCX ftAxxp"
          >
            WING-A
          </p>
          <p>
            Moorland HMP
          </p>
        </div>
      </div>
      <div
        className="sc-bdVaJa iAgRsv"
      >
        <div
          className="sc-bwzfXH gWDLqX"
        >
          <strong
            className="label"
          >
            Detail
          </strong>
          <p
            className="sc-bxivhb ddqgmM"
          >
            A crime occurred
          </p>
        </div>
      </div>
    </div>
    <div
      className="sc-bwzfXH dHeecD"
    >
      <div
        className="sc-bdVaJa iAgRsv"
      >
        <div
          className="sc-bwzfXH flfcYD"
        >
          <strong
            className="label"
          >
            Report number
          </strong>
          <p
            className="sc-bxivhb ddqgmM"
          >
            123456
          </p>
        </div>
        <div
          className="sc-bwzfXH flfcYD"
        >
          <strong
            className="label"
          >
            Reported by
          </strong>
          <p
            className="sc-bxivhb ddqgmM"
          >
            Jo Smith
          </p>
        </div>
      </div>
      <div
        className="sc-bdVaJa iAgRsv"
      >
        <div
          className="sc-bwzfXH flfcYD"
        >
          <strong
            className="label"
          >
            Report date and time
          </strong>
          <p
            className="sc-bxivhb ddqgmM"
          >
            --
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;
